# Factorio-TAS-Generator

./: .gitignore  CMakeLists.txt
src/: Factorio-TAS-Generator.vcxproj  Factorio-TAS-Generator.vcxproj.filters  GenerateScript.cpp  GenerateScript.h  ImportStepsPanel.cpp  ImportStepsPanel.h  SearchUtil.h  StepLine.h  SteptypeColour.cpp  TypePanel.cpp  TypePanel.h  cMain.cpp  cMain.h  cMain_Focus.cpp  cMain_Highlighter.cpp
src/Shared functions/: Functions.cpp  Functions.h
src/Structures/: StepModifiers.h
src/TAS save file/: OpenTas.cpp  OpenTas.h  SaveTas.cpp  SaveTas.h
src/nlohmann/: json.hpp
